# inx-eddn

./: Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: rust.yml
contracts/: EDCAS.abi
src/: edcas_contract.rs  eddn_adapter.rs  hornet_adapter.rs  main.rs
