[package]
name = "inx-eddn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-sdk = { version="1.0.3", features = ["stronghold","rocksdb"]}
zmq = "0.10.0"
tokio = { version = "1.21.2", features = ["full"] }
flate2 = { version = "1.0.24", features = ["zlib-ng"], default-features = false }
dotenv = "0.15.0"
json = "0.12.4"
serde_json = "1.0.94"
bus = "2.3.0"
base64 = "0.21.2"
rustc-hex = "2.1.0"