[package]
name = "inx-eddn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-sdk = { version="1.1.2", features = ["stronghold"]}
zmq = "0.10.0"
tokio = { version = "1.34.0", features = ["full"] }
flate2 = { version = "1.0.28", features = ["zlib-ng"], default-features = false }
json = "0.12.4"
serde_json = "1.0.108"
bus = "2.4.1"
base64 = "0.21.5"
rustc-hex = "2.1.0"