[package]
name = "inx-eddn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#iota-sdk = { version="1.1.2", features = ["stronghold"]}
zmq = "0.10.0"
tokio = { version = "1.37.0", features = ["full"] }
flate2 = { version = "1.0.28", features = ["zlib-ng"], default-features = false }
json = "0.12.4"
serde_json = "1.0.114"
base64 = "0.22.0"
rustc-hex = "2.1.0"
hex = "0.4.3"
chrono = "0.4.37"

ethers = {version = "2.0.14"}

[build-dependencies]
ethers = {version = "2.0.14"}